2008-11-07  Eric Butler  <eric@extremeboredom.net>
	* MonoDevelop.Ide.Gui/SdiWorkspaceWindow.cs: Set toolbar variables to
	null when window is closing so that EnsureToolbarBoxSeparator won't
	try to do anything.

2008-11-07  Eric Butler  <eric@extremeboredom.net>

	* MonoDevelop.Ide.Gui.BrowserDisplayBinding/HtmlViewPane.cs: Show
	"Preview" instead of "Web Browser" if a secondary view, remove
	outdated/broken hack for GTK+ 2.4, and don't allow user to un-check
	buttons.
		
	* MonoDevelop.Ide.Gui/SdiWorkspaceWindow.cs: Move separator to end of
	toolbar after adding a button if one already exists.

2008-11-06  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Ide.Gui/RootWorkspace.cs:
	* MonoDevelop.Ide.Gui/ProjectOperations.cs:
	* MonoDevelop.Ide.Gui.Dialogs/IncludeFilesDialog.cs:
	* MonoDevelop.Ide.Gui.Pads.ProjectPad/SystemFileNodeBuilder.cs:
	* MonoDevelop.Ide.Gui.Pads.ProjectPad/ProjectFolderNodeBuilder.cs: Use
	new default build action API.

	* MonoDevelop.Ide.Templates/SingleFileDescriptionTemplate.cs: Use
	default build action when template does not have an explicit build
	action set, instead of assuming BuildAction.Compile. Fixes Bug 427508
	- adding a 'Empty HTML File' to web site is included in build by
	default.

2008-11-06  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Gui.Components/TransactedTreeBuilder.cs: AddChild
	should not trigger the filling of the parent. If the parent is not
	filled, just do nothing. The new child will be shown when the parent
	is expanded.

	* MonoDevelop.Ide.Gui.Pads.ProjectPad/ProjectNodeBuilder.cs: Add
	dependent files under the files they depend upon. Fixes bug #436774 -
	Moving aspx with codebehind between directories is incorrect.

2008-11-06  Mike Krüger  <mike@icsharpcode.net>

	* MonoDevelop.Ide.CodeTemplates/CodeTemplate.cs:
	* MonoDevelop.Ide.Gui.Content/TextEditorProperties.cs: Worked on code
	templates.

2008-11-06  Mike Krüger  <mike@icsharpcode.net>
