@@ -1,3 +1,8 @@
+2008-11-10  Mike Krüger  <mike@icsharpcode.net>
+
+	* MonoDevelop.Ide.Gui.Content/TextEditorProperties.cs: Added enable auto
+	completion option.
+
 2008-11-07  Eric Butler  <eric@extremeboredom.net>
 	* MonoDevelop.Ide.Gui/SdiWorkspaceWindow.cs: Set toolbar variables to
 	null when window is closing so that EnsureToolbarBoxSeparator won't
